PROYECTO2/CLUSTER/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-proyecto2
  namespace: namespace-proyecto2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-deployment
  type: ClusterIP
