PROYECTO2/CLUSTER/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-proyecto2
  namespace: namespace-proyecto2
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-proyecto2
                port:
                  number: 80
